[metadata]
name = pandoc_drawio_export_filter
version = 0.1
description = Pandoc's custom filter for exporting drawio to PNG.
url = https://github.com/Akira106/pandoc_drawio_export_filter
author = Akira Matsushita
author_email = akinyarosu@gmain.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    panflute >= 2.3.1
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pandoc_drawio_export_filter = pandoc_drawio_export_filter.main:main
